# call-center-voice-agent-accelerator-hackathon

./: CHANGELOG.md  CONTRIBUTING.md  README.md  azure.yaml  deploy-phases.sh  test-build.sh
server/: .env.example  LOCAL_RUN.md  README.md  __init__.py  pyproject.toml  server.py  test_orchestrator.py  test_orchestrator_comparison.py  test_orchestrator_enhanced.py  test_semantic_kernel_simple.py  test_semantic_kernel_voice.py
server/ai_foundry_agent_instructions/: unified_caregiver_agent_instructions.md
server/app/: __init__.py  ai_foundry_client.py
server/app/backend/: __init__.py
server/app/backend/services/: __init__.py  (+3 more)
server/app/context/: cosmos_memory_kernel.py
server/app/handler/: acs_event_handler.py  acs_media_handler.py  runtime_interrupt_kernel.py
server/app/kernel_agents/: action_agent.py  agent_base.py  agent_factory.py  agent_utils.py  generic_agent.py  hr_agent.py  human_agent.py  info_agent.py  marketing_agent.py  patient_context_agent.py  planner_agent.py  procurement_agent.py  product_agent.py  tech_support_agent.py
server/app/kernel_tools/: generic_tools.py  hr_tools.py  marketing_tools.py  procurement_tools.py  product_tools.py  tech_support_tools.py
server/app/models/: messages_kernel.py
server/app/orchestrator/: __init__.py  group_chat_manager.py  orchestrator.py  simple_agents.py
server/app/prompts/: info_agent_prompt.txt
server/handler/: stream_handler.py
server/models/: __init__.py  agent.py  session.py  task.py  utterance.py
server/services/: __init__.py  agent_runtime.py  context_manager.py  error_events.py  redaction.py  retry.py  session_store.py  tool_invocation.py  transcription.py  tts.py
server/static/: index.html
(+45 files in other folders)
