[project]
name = "voice-live-agent"
version = "0.1.0"
description = "Real-time voice agent with Azure Voice Live and ACS/Web streaming clients"
dependencies = [
    "quart",
    "websockets",
    "httpx",
    "python-dotenv",
    "quart-cors",
    "azure-core",
    "azure-communication-identity",
    "aiohttp",
    "azure-eventgrid",
    "azure-identity",
    "azure-communication-callautomation",
    "azure-ai-projects",
    "openai[realtime]"
]
requires-python = ">=3.9"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

# Specific modules that have import issues
[[tool.mypy.overrides]]
module = [
    "azure.ai.projects.*",
    "azure.identity.aio",
    "azure.ai.projects.aio"
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.backend.services.orchestrator_service"
disable_error_code = ["import-untyped", "no-redef"]
